<resources>
    <string name="app_name">UIDesign</string>
    <string name="fullname">Sense Kunlex</string>
    <string name="sent_item">Sent</string>
    <string name="detail">Details</string>
    <string name="History">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent">Helen Kenely</string>
    <string name="amount">$23.00</string>
    <string name="pending">pending</string>
    <string name="confirm">Confirm</string>
    <string name="request">Request</string>
    <string name="thirdtitle">Request</string>
    <string name="amounte">\u20ac 12</string>
    <string name="amountee">50</string>
    <string name="status">Reason : Refund</string>
    <string name="friend">Lanre Aboyin</string>
</resources>
