<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/firstbg"
    tools:context="com.sensationalk.android.myuidesign.ThirdUi">
    <include layout="@layout/toolbar_third"
             android:id="@+id/toolbar3"

        />
    <ScrollView
        android:id="@+id/container"
        android:layout_below="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/request"
              android:textSize="17sp"
              android:layout_margin="8dp"
              />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <LinearLayout
                android:id="@+id/leftside"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"

                    android:layout_marginTop="23dp"
                    android:layout_marginStart="23dp"
                    android:layout_gravity="start"
                    android:id="@+id/profile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/profile"
                    />
                <TextView
                    android:layout_gravity="bottom"
                    android:layout_marginTop="13dp"
                    android:layout_marginLeft="56dp"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="You"
                    />
            </LinearLayout>

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="23dp"
                android:id="@+id/center"

                android:src="@drawable/arrowright"/>
            <LinearLayout

                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView


                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="@color/firstbg"
                    card_view:background="@color/firstbg"
                    card_view:cardCornerRadius="12dp"

                    card_view:cardElevation="6dp">
            <LinearLayout

                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/rightside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginEnd="6dp"
                    android:id="@+id/profi"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/profile"
                    />
                <TextView

                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/friend"
                    android:layout_marginEnd="6dp"
                    />

            </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView


                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    card_view:cardBackgroundColor="@color/firstbg"
                    card_view:background="@color/firstbg"
                    card_view:cardCornerRadius="12dp"

                    card_view:cardElevation="6dp">
                <LinearLayout
                    android:background="@color/firstbg"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_marginEnd="6dp"


                        android:layout_width="31dp"
                        android:layout_height="23dp"
                        android:src="@drawable/profile"
                        />

                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginRight="6dp"
                        android:text="Friend"
                        />
                </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView


                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    card_view:cardBackgroundColor="@color/firstbg"
                    card_view:background="@color/firstbg"
                    card_view:cardCornerRadius="12dp"

                    card_view:cardElevation="6dp">

                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@color/firstbg"


                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView

                        android:layout_marginEnd="6dp"

                        android:layout_width="32dp"
                        android:layout_height="23dp"
                        android:src="@drawable/profile"
                        />
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/friend"
                        android:layout_marginEnd="6dp"
                        />
                </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>



        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request"
            android:textSize="17sp"
            android:layout_margin="8dp"
            />
        <RelativeLayout
            android:layout_marginBottom="70dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="150dp">
<TextView
    android:id="@+id/amount"
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="60sp"
    android:textColor="@color/toolbarBG"
    android:text="@string/amounte"/>


            <TextView
                android:id="@+id/amou"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/toolbarBG"
                android:text="@string/amountee"/>

            <TextView
                android:id="@+id/status"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"

                android:text="@string/status"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_alignEnd="@+id/amou"/>
            </RelativeLayout>



    </LinearLayout>
    </LinearLayout>
</ScrollView>
    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbarBG"/>

</RelativeLayout>
